# k8s_infra

./: .gitignore  .tool-versions  429-load-test.js  DASHBOARD_SUMMARY.md  GRAFANA_DASHBOARD_SETUP.md  GUARDRAILS_FEATURES.md  MALICIOUS_BEHAVIOR_CONTROL.md  MONITORING_FEATURES.md  Makefile  QUICK_REFERENCE.md  README.md  SECURITY_FEATURES.md  cilium-l2-config.yaml  cilium-security-policies.yaml  cilium-values.yaml  cilium_security_manager.py  grafana-dashboard-ai-monitoring.json  grafana-dashboard-gpu-monitoring.json  grafana-dashboard-provider.yaml  grafana-dashboards-configmap.yaml  harbor-lite-values.yaml  harbor-network-policy.yaml  k8s-deployment-guide.md  k8s.drawio  kind-config.yaml  litellm-stack.yaml  load-test.js  mock-exporter-deployment.yaml  monitoring-stack.yaml  priority-classes.yaml  random-load-test.js  redis-stack.yaml  setup.sh  tenant-network-policy.yaml  test_guardrails.py
mock-exporter/: Dockerfile  mock_dcgm.py
my_infra/: main.py  pyproject.toml  requirements.txt  test.md
