[project]
name = "my-infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.0.0",
    "fastapi>=0.129.0",
    "guardrails-ai>=0.5.0",
    "httpx>=0.28.1",
    "kubernetes>=35.0.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.24.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.6",
    "redis>=7.2.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
]
